--- a/config/components.yml
+++ b/config/components.yml
@@ -31,4 +31,4 @@ frameworks:
   - "JavaBuildpack::Framework::PlayAutoReconfiguration"
   - "JavaBuildpack::Framework::PlayJpaPlugin"
   - "JavaBuildpack::Framework::SpringAutoReconfiguration"
-  - "JavaBuildpack::Framework::RedisSessionManager"
+  - "JavaBuildpack::Framework::TomcatRedisSessionManager"
