--- a/config/tomcatredissessionmanager.yml
+++ b/config/tomcatredissessionmanager.yml
@@ -22,4 +22,4 @@ jedis:
   repository_root: "https://s3.amazonaws.com/jedis"
 commons_pool:
   version: 2.0.0
-  repository_root: "https://s3.amazonaws.com/commons-pool
+  repository_root: "https://s3.amazonaws.com/commons-pool"
